--- a/.github/workflows/run-core-flow.yml
+++ b/.github/workflows/run-core-flow.yml
@@ -7,6 +7,8 @@ jobs:
         uses: actions/checkout@v2.3.3
       - name: HubSpot CLI Install
         uses: HubSpot/hubspot-project-actions/install-cli@6fc4c89edad452b63f07283afb73059e181b877a
+        with:
+          cli_version: 7.7.16-experimental.1
       - name: HubSpot Project Upload Action
         uses: HubSpot/hubspot-project-actions/project-upload@6fc4c89edad452b63f07283afb73059e181b877a
         with:
