--- a/.github/workflows/run-core-flow.yml
+++ b/.github/workflows/run-core-flow.yml
@@ -6,11 +6,11 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2.3.3
       - name: HubSpot CLI Install
-        uses: HubSpot/hubspot-project-actions/install-cli@6fc4c89edad452b63f07283afb73059e181b877a
+        uses: HubSpot/hubspot-project-actions/install-cli@${{ github.sha }}
         with:
           cli_version: 7.7.16-experimental.1
       - name: HubSpot Project Upload Action
-        uses: HubSpot/hubspot-project-actions/project-upload@6fc4c89edad452b63f07283afb73059e181b877a
+        uses: HubSpot/hubspot-project-actions/project-upload@${{ github.sha }}
         with:
           account_id: ${{ secrets.HUBSPOT_ACCOUNT_ID }}
           personal_access_key: ${{ secrets.HUBSPOT_PERSONAL_ACCESS_KEY }}
