--- a/create-test-account/action.yml
+++ b/create-test-account/action.yml
@@ -27,4 +27,24 @@ runs:
         HUBSPOT_PERSONAL_ACCESS_KEY: ${{ inputs.personal_access_key }}
         HUBSPOT_ACCOUNT_ID: ${{ inputs.account_id }}
       run: |
-        hs test-account create --use-env --json --config-path ${{ inputs.account_config_path }} | jq -r '{"personal_access_key":.personalAccessKey, "account_id":.accountId} | to_entries | .[] | "\(.key)=\(.value)"' >> "$GITHUB_OUTPUT"
+        if [ -z "${{ inputs.account_config_path }}" ]; then
+          echo "Error: account_config_path is required but was not set"
+          exit 1
+        fi
+
+        if [ ! -f "${{ inputs.account_config_path }}" ]; then
+          echo "Error: Test account config file not found at path: ${{ inputs.account_config_path }}"
+          exit 1
+        fi
+
+        # Store the command output in a variable
+        output=$(hs test-account create --use-env --json --config-path "${{ inputs.account_config_path }}")
+        exit_code=$?
+
+        if [ $exit_code -eq 0 ]; then
+          echo "$output" | jq -r '{"personal_access_key":.personalAccessKey, "account_id":.accountId} | to_entries | .[] | "\(.key)=\(.value)"' >> "$GITHUB_OUTPUT"
+        else
+          echo "Error: Failed to create test account. Command output:"
+          echo "$output"
+          exit $exit_code
+        fi
