--- a/.github/workflows/run-core-flow.yml
+++ b/.github/workflows/run-core-flow.yml
@@ -19,12 +19,18 @@ jobs:
       - name: HubSpot Project Validation Action
         uses: ./project-validate
         with:
+          project_dir: ./.github/workflows/example-project
           account_id: ${{ secrets.HUBSPOT_ACCOUNT_ID }}
           personal_access_key: ${{ secrets.HUBSPOT_PERSONAL_ACCESS_KEY }}
-          project_dir: ./.github/workflows/example-project
       - name: HubSpot Project Upload Action
         uses: ./project-upload
         with:
+          project_dir: ./.github/workflows/example-project
           account_id: ${{ steps.test-account-create-step.outputs.account_id }}
           personal_access_key: ${{ steps.test-account-create-step.outputs.personal_access_key }}
-          project_dir: ./.github/workflows/example-project
+      - name: HubSpot Delete Test Account Action
+        uses: ./delete-test-account
+        with:
+          test_account_id: ${{ steps.test-account-create-step.outputs.account_id }}
+          personal_access_key: ${{ secrets.HUBSPOT_PERSONAL_ACCESS_KEY }}
+          account_id: ${{ secrets.HUBSPOT_ACCOUNT_ID }}
