--- a/project-upload/action.yml
+++ b/project-upload/action.yml
@@ -25,33 +25,23 @@ runs:
       env:
         HUBSPOT_PERSONAL_ACCESS_KEY: ${{ inputs.personal_access_key }}
         HUBSPOT_ACCOUNT_ID: ${{ inputs.account_id }}
-      working-directory: ${{ inputs.project_dir }}
       run: |
-        # Print directory contents for debugging
-        echo "::group::Directory contents"
-        ls -la
-        echo "::endgroup::"
+        # Source shared utilities
+        . "$GITHUB_ACTION_PATH/../scripts/action-utils.sh"
 
-        # Check if hsproject.json exists
-        if [ ! -f "hsproject.json" ]; then
-          echo "::error::hsproject.json not found in $(pwd)"
+        # Resolve and validate project directory
+        resolve_project_dir "${{ inputs.project_dir }}"
+
+        # Run upload command
+        run_hs_command \
+          "hs project upload --force-create --use-env --json --message '${{ github.event.head_commit.message || 'Uploaded via HubSpot GitHub Action' }} (${GITHUB_SHA:0:7})'" \
+          "true" \
+          '{"build_id":.buildId, "deploy_id":.deployId} | to_entries | .[] | "\(.key)=\(.value)"'
+
+        # Exit if command failed
+        if [ $? -ne 0 ]; then
           exit 1
         fi
 
-        # Run upload command with verbose output
-        echo "::group::Running upload command"
-        output=$(hs project upload --force-create --use-env --json --message "use experimental cli release (${GITHUB_SHA:0:7})") || {
-          echo "::error::Command failed with output:"
-          echo "$output"
-          exit 1
-        }
-        echo "Command output: $output"
-        echo "::endgroup::"
-
-        # Try to parse JSON and set outputs
-        if echo "$output" | jq . >/dev/null 2>&1; then
-          echo "$output" | jq -r '{"build_id":.buildId, "deploy_id":.deployId} | to_entries | .[] | "\(.key)=\(.value)"' >> "$GITHUB_OUTPUT"
-        else
-          echo "::error::Failed to parse JSON output: $output"
-          exit 1
-        fi
+        # Output the parsed results
+        echo "$PARSED_OUTPUT" >> "$GITHUB_OUTPUT"
