--- a/project-validate/action.yml
+++ b/project-validate/action.yml
@@ -23,24 +23,11 @@ runs:
         HUBSPOT_PERSONAL_ACCESS_KEY: ${{ inputs.personal_access_key }}
         HUBSPOT_ACCOUNT_ID: ${{ inputs.account_id }}
       run: |
-        # Convert to absolute path if relative
-        if [[ "${{ inputs.project_dir }}" != /* ]]; then
-          project_dir="$GITHUB_WORKSPACE/${{ inputs.project_dir }}"
-        else
-          project_dir="${{ inputs.project_dir }}"
-        fi
+        # Source shared utilities
+        . "$GITHUB_ACTION_PATH/../scripts/action-utils.sh"
 
-        if [ ! -d "$project_dir" ]; then
-          echo "Error: Project directory not found at path: $project_dir"
-          exit 1
-        fi
-
-        if [ ! -f "$project_dir/hsproject.json" ]; then
-          echo "Error: hsproject.json not found in directory: $project_dir"
-          exit 1
-        fi
-
-        cd "$project_dir"
+        # Resolve and validate project directory
+        resolve_project_dir "${{ inputs.project_dir }}"
 
         # Run validation - command will exit with non-zero if validation fails
         hs project validate --use-env
