validate pak and account id

--- a/create-test-account/action.yml
+++ b/create-test-account/action.yml
@@ -30,6 +30,10 @@ runs:
         # Source shared utilities
         . "$GITHUB_ACTION_PATH/../scripts/action-utils.sh"
 
+        # Validate account and personal access key
+        validate_account_and_personal_access_key "${{ inputs.account_id }}" "${{ inputs.personal_access_key }}"
+
+        # Validate account config path
         if [ ! -f "${{ inputs.account_config_path }}" ]; then
           echo "Error: Test account config file not found at path: ${{ inputs.account_config_path }}"
           exit 1
