--- a/create-test-account/action.yml
+++ b/create-test-account/action.yml
@@ -47,3 +47,8 @@ runs:
         # Parse and set outputs
         set_output_from_json "personal_access_key" ".personalAccessKey"
         set_output_from_json "account_id" ".accountId"
+
+        # Debug: Verify outputs were set
+        echo "Debug: Outputs set in create-test-account action:"
+        echo "GITHUB_OUTPUT contents:"
+        cat $GITHUB_OUTPUT
