--- a/.github/workflows/run-core-flow.yml
+++ b/.github/workflows/run-core-flow.yml
@@ -18,37 +18,18 @@ jobs:
           account_config_path: ./.github/workflows/test-account-config.json
           personal_access_key: ${{ secrets.HUBSPOT_PERSONAL_ACCESS_KEY }}
           account_id: ${{ secrets.HUBSPOT_ACCOUNT_ID }}
-
-      - name: Debug Test Account Outputs
-        run: |
-          echo "Test account creation outputs:"
-          echo "account_id: ${{ steps.test-account-create-step.outputs.account_id }}"
-          echo "personal_access_key: ${{ steps.test-account-create-step.outputs.personal_access_key }}"
-
       - name: HubSpot Project Validation Action
         uses: ./project-validate
         with:
           project_dir: ./.github/workflows/example-project
           personal_access_key: ${{ secrets.HUBSPOT_PERSONAL_ACCESS_KEY }}
           account_id: ${{ secrets.HUBSPOT_ACCOUNT_ID }}
-
-      - name: Debug Project Upload Inputs
-        run: |
-          echo "Project upload inputs:"
-          echo "account_id to be used: ${{ steps.test-account-create-step.outputs.account_id }}"
-          echo "personal_access_key to be used: ${{ steps.test-account-create-step.outputs.personal_access_key }}"
-
       - name: HubSpot Project Upload Action
         uses: ./project-upload
         with:
           project_dir: ./.github/workflows/example-project
           personal_access_key: ${{ steps.test-account-create-step.outputs.personal_access_key }}
           account_id: ${{ steps.test-account-create-step.outputs.account_id }}
-
-      - name: Debug Job Outputs
-        run: |
-          echo "Job outputs that will be available to cleanup job:"
-          echo "test_account_id: ${{ steps.test-account-create-step.outputs.account_id }}"
 
   cleanup:
     needs: deploy
@@ -57,6 +38,10 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2.3.3
+      - name: HubSpot CLI Install Action
+        uses: ./install-cli
+        with:
+          cli_version: 7.7.16-experimental.2
       - name: HubSpot Delete Test Account Action
         uses: ./delete-test-account
         with:
