--- a/delete-test-account/action.yml
+++ b/delete-test-account/action.yml
@@ -6,12 +6,12 @@ inputs:
     required: true
     type: string
   personal_access_key:
-    description: "[SECRET] Personal Access Key generated in HubSpot that grants access to the CLI."
-    required: true
+    description: "[SECRET] Personal Access Key generated in HubSpot that grants access to the CLI. If not provided, will use DEFAULT_PERSONAL_ACCESS_KEY from environment."
+    required: false
     type: string
   account_id:
-    description: "HubSpot account ID associated with the personal-access-key."
-    required: true
+    description: "HubSpot account ID associated with the personal-access-key. If not provided, will use DEFAULT_ACCOUNT_ID from environment."
+    required: false
     type: number
 runs:
   using: "composite"
@@ -19,13 +19,22 @@ runs:
     - name: Delete HubSpot test account
       shell: bash
       env:
-        HUBSPOT_PERSONAL_ACCESS_KEY: ${{ inputs.personal_access_key }}
-        HUBSPOT_ACCOUNT_ID: ${{ inputs.account_id }}
+        HUBSPOT_PERSONAL_ACCESS_KEY: ${{ inputs.personal_access_key || env.DEFAULT_PERSONAL_ACCESS_KEY }}
+        HUBSPOT_ACCOUNT_ID: ${{ inputs.account_id || env.DEFAULT_ACCOUNT_ID }}
       run: |
+        # Source shared utilities
+        . "$GITHUB_ACTION_PATH/../scripts/action-utils.sh"
+
+        # Validate account and personal access key
+        validate_account_and_personal_access_key
+
+        # Validate test account ID
         if [ -z "${{ inputs.test_account_id }}" ]; then
           echo "Error: test_account_id is required but was not set"
           exit 1
         fi
 
         # Delete the test account
-        hs test-account delete --use-env --account-id "${{ inputs.test_account_id }}"
+        run_hs_command \
+          "hs test-account delete --use-env --account-id '${{ inputs.test_account_id }}'" \
+          "false"
