--- a/project-validate/action.yml
+++ b/project-validate/action.yml
@@ -7,12 +7,12 @@ inputs:
     default: ./
     type: string
   personal_access_key:
-    description: "[SECRET] Personal Access Key generated in HubSpot that grants access to the CLI."
-    required: true
+    description: "[SECRET] Personal Access Key generated in HubSpot that grants access to the CLI. If not provided, will use DEFAULT_PERSONAL_ACCESS_KEY from environment."
+    required: false
     type: string
   account_id:
-    description: "HubSpot account ID associated with the personal-access-key."
-    required: true
+    description: "HubSpot account ID associated with the personal-access-key. If not provided, will use DEFAULT_ACCOUNT_ID from environment."
+    required: false
     type: number
 runs:
   using: "composite"
@@ -20,14 +20,14 @@ runs:
     - name: Validate HubSpot project
       shell: bash
       env:
-        HUBSPOT_PERSONAL_ACCESS_KEY: ${{ inputs.personal_access_key }}
-        HUBSPOT_ACCOUNT_ID: ${{ inputs.account_id }}
+        HUBSPOT_PERSONAL_ACCESS_KEY: ${{ inputs.personal_access_key || env.DEFAULT_PERSONAL_ACCESS_KEY }}
+        HUBSPOT_ACCOUNT_ID: ${{ inputs.account_id || env.DEFAULT_ACCOUNT_ID }}
       run: |
         # Source shared utilities
         . "$GITHUB_ACTION_PATH/../scripts/action-utils.sh"
 
         # Validate account and personal access key
-        validate_account_and_personal_access_key "${{ inputs.account_id }}" "${{ inputs.personal_access_key }}"
+        validate_account_and_personal_access_key
 
         # Resolve and validate project directory
         resolve_project_dir "${{ inputs.project_dir }}"
