--- a/.github/workflows/run-core-flow.yml
+++ b/.github/workflows/run-core-flow.yml
@@ -3,6 +3,7 @@ on: [push, workflow_dispatch]
 env:
   DEFAULT_PERSONAL_ACCESS_KEY: ${{ secrets.HUBSPOT_PERSONAL_ACCESS_KEY }}
   DEFAULT_ACCOUNT_ID: ${{ secrets.HUBSPOT_ACCOUNT_ID }}
+  DEFAULT_CLI_VERSION: "7.7.16-experimental.2"
 
 jobs:
   deploy:
@@ -12,10 +13,6 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2.3.3
-      - name: HubSpot CLI Install Action
-        uses: ./install-cli
-        with:
-          cli_version: 7.7.16-experimental.2
       - name: HubSpot Test Account Creation Action
         id: test-account-create-step
         uses: ./create-test-account
@@ -39,10 +36,6 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2.3.3
-      - name: HubSpot CLI Install Action
-        uses: ./install-cli
-        with:
-          cli_version: 7.7.16-experimental.2
       - name: HubSpot Delete Test Account Action
         uses: ./delete-test-account
         with:
