--- a/project-validate/action.yml
+++ b/project-validate/action.yml
@@ -14,9 +14,24 @@ inputs:
     description: "HubSpot account ID associated with the personal-access-key. If not provided, will use DEFAULT_ACCOUNT_ID from environment."
     required: false
     type: number
+  cli_version:
+    description: "Version of the HubSpot CLI to install. If not provided, will use DEFAULT_CLI_VERSION from environment."
+    required: false
+    type: string
 runs:
   using: "composite"
   steps:
+    - name: Setup HubSpot CLI
+      shell: bash
+      env:
+        HUBSPOT_CLI_VERSION: ${{ inputs.cli_version || env.DEFAULT_CLI_VERSION }}
+      run: |
+        # Source shared utilities
+        . "$GITHUB_ACTION_PATH/../scripts/action-utils.sh"
+
+        # Setup CLI
+        setup_hubspot_cli
+
     - name: Validate HubSpot project
       shell: bash
       env:
