add success message and update readme

--- a/create-test-account/action.yml
+++ b/create-test-account/action.yml
@@ -65,3 +65,5 @@ runs:
         # Parse and set outputs
         set_output_from_json "personal_access_key" ".personalAccessKey"
         set_output_from_json "account_id" ".accountId"
+
+        echo "✅ Test account created successfully"
