--- a/.github/workflows/run-core-flow.yml
+++ b/.github/workflows/run-core-flow.yml
@@ -34,6 +34,8 @@ jobs:
     if: always() && needs.deploy.outputs.test_account_id != ''
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout
+        uses: actions/checkout@v2.3.3
       - name: HubSpot Delete Test Account Action
         uses: ./delete-test-account
         with:
