Add two new actions

--- a/create-test-account/action.yml
+++ b/create-test-account/action.yml
@@ -36,7 +36,7 @@ runs:
         . "$GITHUB_ACTION_PATH/../scripts/action-utils.sh"
 
         # Setup CLI
-        setup_hubspot_cli
+        install_hubspot_cli
 
     - name: Create new HubSpot test account
       id: create-test-account
