--- a/delete-test-account/action.yml
+++ b/delete-test-account/action.yml
@@ -29,7 +29,7 @@ runs:
         . "$GITHUB_ACTION_PATH/../scripts/action-utils.sh"
 
         # Setup CLI
-        setup_hubspot_cli
+        install_hubspot_cli
 
     - name: Delete HubSpot test account
       shell: bash
