--- a/project-validate/action.yml
+++ b/project-validate/action.yml
@@ -30,7 +30,7 @@ runs:
         . "$GITHUB_ACTION_PATH/../scripts/action-utils.sh"
 
         # Setup CLI
-        setup_hubspot_cli
+        install_hubspot_cli
 
     - name: Validate HubSpot project
       shell: bash
