--- a/install-oauth-app/action.yml
+++ b/install-oauth-app/action.yml
@@ -1,17 +1,20 @@
-name: "Project Upload"
-description: "Upload and build a HubSpot project in your account. If auto-deploy is enabled, the build will also be deployed to your account."
+name: "Install OAuth App"
+description: "Install an OAuth app into a Developer Test Account"
 inputs:
+  test_account_id:
+    description: "The account ID of the test account to install your app into"
+    required: true
+    type: string
   project_dir:
     description: "The path to the directory where your hsproject.json file is located"
     required: true
     default: ./
-    type: string
   personal_access_key:
-    description: "[SECRET] Personal Access Key generated in HubSpot that grants access to the CLI. If not provided, will use DEFAULT_PERSONAL_ACCESS_KEY from environment."
+    description: "[SECRET] Personal Access Key, generated in HubSpot, to use the CLI. If not provided, will use DEFAULT_PERSONAL_ACCESS_KEY from environment."
     required: false
     type: string
   account_id:
-    description: "HubSpot account ID associated with the personal-access-key. If not provided, will use DEFAULT_ACCOUNT_ID from environment."
+    description: "HubSpot account ID associated with the personal-access-key. Also known as Portal ID. If not provided, will use DEFAULT_ACCOUNT_ID from environment."
     required: false
     type: number
   cli_version:
@@ -19,10 +22,9 @@ inputs:
     required: false
     type: string
 outputs:
-  build_id:
-    description: "The build ID of the created HubSpot project build"
-  deploy_id:
-    description: "The deploy ID if auto-deploy is enabled"
+  auth_code:
+    description: The auth code returned by the app install
+    value: ${{ steps.install-app.outputs.auth_code }}
 runs:
   using: "composite"
   steps:
@@ -37,7 +39,8 @@ runs:
         # Setup CLI
         install_hubspot_cli
 
-    - name: Upload source code to HubSpot Project
+    - name: Install an OAuth app into a Developer Test Account
+      id: install-app
       shell: bash
       env:
         HUBSPOT_PERSONAL_ACCESS_KEY: ${{ inputs.personal_access_key || env.DEFAULT_PERSONAL_ACCESS_KEY }}
@@ -52,13 +55,18 @@ runs:
         # Resolve and validate project directory
         resolve_project_dir "${{ inputs.project_dir }}"
 
-        # Run upload command
+        # Validate test account ID
+        if [ -z "${{ inputs.test_account_id }}" ]; then
+          echo "Error: test_account_id is required but was not set"
+          exit 1
+        fi
+
+        # Run app install command
         run_hs_command \
-          "hs project upload --force-create --use-env --json --message '${{ github.event.head_commit.message || 'Uploaded via HubSpot GitHub Action' }} (${GITHUB_SHA:0:7})'" \
+          "hs app install ${{ inputs.test_account_id }} --use-env --json" \
           "true"
 
         # Parse and set outputs
-        set_output_from_json "build_id" ".buildId"
-        set_output_from_json "deploy_id" ".deployId" "true"
+        set_output_from_json "auth_code" ".authCode"
 
-        echo "✅ Project upload completed successfully"
+        echo "✅ App installed successfully"
