--- a/project-validate/action.yml
+++ b/project-validate/action.yml
@@ -15,7 +15,7 @@ inputs:
     required: false
     type: number
   cli_version:
-    description: "Version of the HubSpot CLI to install. If not provided, will use DEFAULT_CLI_VERSION from environment."
+    description: "Version of the HubSpot CLI to install. If not provided, will use DEFAULT_CLI_VERSION from environment. If neither are found, defaults to `latest`."
     required: false
     type: string
 runs:
