--- a/.github/workflows/example-project/src/app/example-app-hsmeta.json
+++ b/.github/workflows/example-project/src/app/example-app-hsmeta.json
@@ -8,10 +8,7 @@
     "auth": {
       "type": "oauth",
       "redirectUrls": ["http://localhost:3000"],
-      "requiredScopes": [
-        "crm.objects.contacts.read",
-        "crm.objects.contacts.write"
-      ],
+      "requiredScopes": [],
       "optionalScopes": [],
       "conditionallyRequiredScopes": []
     },
