remove the cleanup flow

--- a/.github/workflows/example-project/src/app/example-app-hsmeta.json
+++ b/.github/workflows/example-project/src/app/example-app-hsmeta.json
@@ -8,7 +8,7 @@
     "auth": {
       "type": "oauth",
       "redirectUrls": ["http://localhost:3000"],
-      "requiredScopes": [],
+      "requiredScopes": ["crm.objects.contacts.read"],
       "optionalScopes": [],
       "conditionallyRequiredScopes": []
     },
