remove network debug

--- a/install-oauth-app/action.yml
+++ b/install-oauth-app/action.yml
@@ -18,7 +18,7 @@ inputs:
     required: false
     type: number
   cli_version:
-    description: "Version of the HubSpot CLI to install. If not provided, will use DEFAULT_CLI_VERSION from environment. If neither are found, defaults to `latest`."
+    description: "Version of the HubSpot CLI to install. If not provided, will use DEFAULT_CLI_VERSION from environment."
     required: false
     type: string
 outputs:
@@ -56,7 +56,7 @@ runs:
 
         # Run app install command
         run_hs_command \
-          "hs app install ${{ inputs.test_account_id }} --use-env --network-debug" \
+          "hs app install ${{ inputs.test_account_id }} --use-env --json" \
           "true"
 
         # Parse and set outputs
