--- a/project-upload/action.yml
+++ b/project-upload/action.yml
@@ -18,6 +18,10 @@ inputs:
     description: "Version of the HubSpot CLI to install. If not provided, will use DEFAULT_CLI_VERSION from environment. If neither are found, defaults to `latest`."
     required: false
     type: string
+  profile:
+    description: "Profile to use for the HubSpot CLI. If not provided, will use DEFAULT_PROFILE from environment."
+    required: false
+    type: string
 outputs:
   build_id:
     description: "The build ID of the created HubSpot project build"
@@ -35,6 +39,7 @@ runs:
       env:
         HUBSPOT_PERSONAL_ACCESS_KEY: ${{ inputs.personal_access_key || env.DEFAULT_PERSONAL_ACCESS_KEY }}
         HUBSPOT_ACCOUNT_ID: ${{ inputs.account_id || env.DEFAULT_ACCOUNT_ID }}
+        HUBSPOT_PROFILE: ${{ inputs.profile || env.DEFAULT_PROFILE }}
       run: |
         # Source shared utilities
         . "$GITHUB_ACTION_PATH/../scripts/action-utils.sh"
@@ -45,9 +50,15 @@ runs:
         # Resolve and validate project directory
         resolve_project_dir "${{ inputs.project_dir }}"
 
+        # Handle profile usage
+        PROFILE_ARG=""
+        if [ -n "$HUBSPOT_PROFILE" ]; then
+          PROFILE_ARG="--profile $HUBSPOT_PROFILE"
+        fi
+
         # Run upload command
         run_hs_command \
-          "hs project upload --force-create --use-env --json --message '${{ github.event.head_commit.message || 'Uploaded via HubSpot GitHub Action' }} (${GITHUB_SHA:0:7})'" \
+          "hs project upload --force-create --use-env --json --message '${{ github.event.head_commit.message || 'Uploaded via HubSpot GitHub Action' }} (${GITHUB_SHA:0:7})' $PROFILE_ARG" \
           "true"
 
         # Parse and set outputs
