--- a/.github/workflows/example-project/src/app/example-app-hsmeta.json
+++ b/.github/workflows/example-project/src/app/example-app-hsmeta.json
@@ -7,7 +7,7 @@
     "distribution": "private",
     "auth": {
       "type": "oauth",
-      "redirectUrls": ["http://localhost:3000"],
+      "redirectUrls": ["${DOMAIN}"],
       "requiredScopes": ["crm.objects.contacts.read"],
       "optionalScopes": [],
       "conditionallyRequiredScopes": []
